syntax = "proto3";

package v1.user;

option go_package = "./common/protos/v1/user";
option java_multiple_files = true;
option java_package = "com.cornershopapp.usersapi.grpc";

service GRPCUsersService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

message UserMessage {
  string userId = 1;
  string name = 2;
  string phoneNumber = 3;
  int32 age = 4;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  UserMessage userMessage = 1;
}

message ListUsersRequest{}

message ListUsersResponse {
  repeated UserMessage userMessages = 1;
}